--- a/secure_pi/pubspec.yaml
+++ b/secure_pi/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   charts_flutter: ^0.9.0
   animations: ^1.0.0+5
   google_fonts: ^1.0.0
+  url_launcher: ^5.4.5
 
 
 dev_dependencies:
